@@ -1,5 +1,6 @@
 2.35	Some instructions on installation for Windows users.
 	Doesn't push libpng onto @LIBS unless png support is requested.
+	Supports Storable's freeze/thaw via a custom serializer.
 2.34    Added a check for stray gd.h include files from older installations. If any are
 	      found, Makefile.PL will issue a warning.
 	Fixed incorrect documentation of GD::Simple->string() method. The method call
